--- a/warehouse/client-service/pom.xml
+++ b/warehouse/client-service/pom.xml
@@ -9,10 +9,9 @@
         <version>1.0</version>
     </parent>
     <groupId>com.koshelap.spring</groupId>
-    <artifactId>product-service</artifactId>
+    <artifactId>client-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>product-service</name>
-    <description>Demo project for Spring Boot</description>
+    <name>client-service</name>
 
     <properties>
         <java.version>17</java.version>
@@ -64,6 +63,6 @@
             </plugin>
         </plugins>
 
-        <finalName>product-service</finalName>
+        <finalName>client-service</finalName>
     </build>
 </project>
