--- a/warehouse/client-service/docker-compose.yml
+++ b/warehouse/client-service/docker-compose.yml
@@ -4,17 +4,17 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "8081:8081"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/db1
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/client
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
   postgres:
     image: "postgres:13"
     ports:
-      - "5432:5432"
+      - "5433:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=db1
+      - POSTGRES_DB=client
 
