--- a/warehouse/client-service/src/main/resources/application.yml
+++ b/warehouse/client-service/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 spring:
   datasource:
-    # Эти свойства будут перегружены свойствами в docker-compose.yml
-    url: jdbc:postgresql://localhost:5432/db1
+    url: jdbc:postgresql://localhost:5432/client
     username: postgres
     password: postgres
   jpa:
