--- a/warehouse/client-service/docker-compose.yml
+++ b/warehouse/client-service/docker-compose.yml
@@ -1,11 +1,12 @@
 services:
-  app:
+  client-app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: client.dockerfile
     ports:
       - "8081:8081"
     environment:
+      - SERVER_PORT=8081
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/client
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
