--- a/warehouse/product-service/src/main/resources/db/changelog/data/2025-02-22--inventory.yaml
+++ b/warehouse/product-service/src/main/resources/db/changelog/data/2025-02-22--inventory.yaml
@@ -11,7 +11,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  type: int
+                  type: bigint
                   autoIncrement: true
                   constraints:
                     nullable: false
