--- a/warehouse/product-service/pom.xml
+++ b/warehouse/product-service/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.5.5.Final</version> <!-- Укажите актуальную версию -->
+            <version>1.5.5.Final</version>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
