--- a/warehouse/client-service/src/main/resources/application.yml
+++ b/warehouse/client-service/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8081
 spring:
   environment:
     - SERVER_PORT=8081
@@ -6,4 +8,9 @@ spring:
     username: postgres
     password: postgres
   jpa:
-    generate-ddl: true
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
