--- a/warehouse/client-service/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/warehouse/client-service/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,5 +1,5 @@
 databaseChangeLog:
   - include:
-      file: classpath:/db/changelog/data/2025-02-24--client.yaml
+      file: src/main/resources/db/changelog/data/2025-02-24--client.yaml
 
 
