--- a/warehouse/client-service/src/main/resources/application.yml
+++ b/warehouse/client-service/src/main/resources/application.yml
@@ -11,9 +11,11 @@ spring:
     url: jdbc:postgresql://localhost:5432/client
     username: postgres
     password: postgres
+    driver-class-name: org.postgresql.Driver
   jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
