--- a/warehouse/product-service/src/main/resources/application.yml
+++ b/warehouse/product-service/src/main/resources/application.yml
@@ -4,9 +4,14 @@ spring:
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
-  liquibase:
-    change-log: classpath:/db/changelog/db.changelog-master.yaml
   jpa:
-    generate-ddl: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
 
 
